# smithery-sdk

agentic-scripts/: README.md  config.json
python/: PARITY_REPORT.md  pyproject.toml
python/examples/: client_integration.py
python/registry/: README.md  pyproject.toml
python/registry/docs/: README.md  USAGE.md
python/registry/docs/models/components/: connectioninfo.md  serverdetailresponse.md
python/registry/docs/models/errors/: unauthorizederror.md
python/registry/docs/models/operations/: listserversrequest.md
python/registry/docs/sdks/servers/: README.md
python/registry/docs/sdks/smitheryregistry/: README.md
python/registry/examples/: list_servers.py
python/registry/src/smithery_registry/: __init__.py  client.py  servers.py
python/registry/src/smithery_registry/core/: config.py  http_client.py  retry.py
python/registry/src/smithery_registry/models/components/: __init__.py  connection_info.py  pagination.py  security.py  server_detail_response.py  server_list_item.py  tool.py
python/registry/src/smithery_registry/models/errors/: __init__.py  base_error.py
python/registry/src/smithery_registry/models/operations/: __init__.py  get_server.py  list_servers.py
python/registry/src/smithery_registry/utils/: pagination.py
python/sdk/: __init__.py  config.py  transport.py  url.py
python/sdk/client/: __init__.py  ai_sdk.py  wrap_error.py
python/sdk/client/llm/: __init__.py  anthropic.py  openai.py
python/sdk/server/: __init__.py  stateful.py
python/tests/: test_client_integrations.py  test_parity_features.py  test_registry_hooks.py
